# robot

./: .gitignore  CMakeLists.txt  Config.h  MotorDriverDesign.drawio  MotorDriverDesign.xml  README.md  Robot-HW-V2-PICO.dsn  Robot-HW.dsn  Robot.odg  RobotPositionData.xml  robot.cpp
balancer/: Balancer.cpp  Balancer.h  CMakeLists.txt
controller/: CMakeLists.txt  Controller.cpp  Controller.h
gyro/: CMakeLists.txt  Gyro.cpp  Gyro.h  gyro.cpp  gyro.h
legs/: CMakeLists.txt  Joint.cpp  Joint.h  Leg.cpp  Leg.h  Legs.cpp  Legs.h
motor/: CMakeLists.txt  Motor.cpp  Motor.h  MotorApp.cpp  MotorApp.h  MotorDriver.cpp  MotorDriver.h  MotorDriverApp.cpp  MotorDriverApp.h  Motors.cpp  Motors.h  MotorsDriver.cpp  MotorsDriver.h  PID_v1.cpp  PID_v1.h  drv8825-perf.py  drv8825.py  rpi4-stepper.h
motor/app/: MotorDriverApp.cpp
motors/: CMakeLists.txt  Motors  Motors.cpp  Motors.h  rpi4-stepper.h
mpu6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  mpu  mpu6050.c  mpu6050.cpp  mpu6050.demo.c  mpu6050.h
old_motor_pi_control/: Motors.cpp  MotorsDriver.cpp  StandardTypes.h  drv8825.py
old_motor_pi_control/app/: MotorDriverApp.h
pico/: EmulatePI.py  EmulatePITest.py  MotorDriver.py  MotorDriverDrv8825.py  MotorsDriver  MotorsDriver.cpp  Notes.txt  PI-ADC.py  PI-bin.py  PICO-ADC.py  PICO-PIO.orig.py  PICO-PIO.py  PICO-bin.py  PICOCom.py  PICO_LWD.py  PICom.py  README.md  echo.py  talk.py  talker.py
pico/examples/: EmulatePI.py  Hello.App.py  Hello.py  MotorDriverDrv8825.py  MotorDriverPI.py  MotorsDriver.h  PI-ADC.py  PICO-PIO.py  PICOCom.py  PICom.py  PIHex.py  blinker.py  speedcode.cpp
servo/: CMakeLists.txt  PCA9685.cpp  PCA9685.h  Servo.cpp  Servo.cpp.orig  Servo.h
sys/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  Fifo.h  LockingQueue.h  PID_v1.cpp  PID_v1.h  Slog.cpp  Slog.h  SlogTypes.h  Slogbuf.h  Threads.cpp  Threads.h  WaitTimer.cpp  WaitTimer.h
test/: CMakeLists.txt  TestMod.cpp  TestMod.h  TestModLegs.cpp  TestModLegs.h  keypress.cpp  keypress.h
